{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 50,
  "lineage": "aef360d6-e097-2a0b-cb88-076f88ae2667",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "terraform_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fc5d935ebf8bc3bc",
            "arn": "arn:aws:ec2:us-east-1:442042553076:instance/i-0e65e3da86b86ba88",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "EC2S3SecretsProfile",
            "id": "i-0e65e3da86b86ba88",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "TASKY",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-001ba907880ce90ac",
            "private_dns": "ip-192-168-4-59.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.4.59",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02e5e45ff3998d8c4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-003a61ff4f3337039",
            "tags": {
              "Environment": "Production",
              "Name": "TASKY_MONGODB",
              "Purpose": "MongoDB Database Server"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "TASKY_MONGODB",
              "Purpose": "MongoDB Database Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0dcc27f904dc73012"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.ec2_s3_profile",
            "aws_iam_role.ec2_s3_role",
            "aws_security_group.mongodb_sg",
            "aws_subnet.private_subnet_1",
            "aws_vpc.mongo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:442042553076:internet-gateway/igw-07b70f9f0d407f26e",
            "id": "igw-07b70f9f0d407f26e",
            "owner_id": "442042553076",
            "tags": {
              "Name": "IGW"
            },
            "tags_all": {
              "Name": "IGW"
            },
            "vpc_id": "vpc-0c0d73acf588d471b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.mongo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:442042553076:route-table/rtb-0861feeeec6892e5e",
            "id": "rtb-0861feeeec6892e5e",
            "owner_id": "442042553076",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07b70f9f0d407f26e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public_RT_Tasky"
            },
            "tags_all": {
              "Name": "Public_RT_Tasky"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c0d73acf588d471b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_vpc.mongo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-064c9a99b1329a011",
            "route_table_id": "rtb-0861feeeec6892e5e",
            "subnet_id": "subnet-00ca24babe8918328"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.public_RT",
            "aws_subnet.public_subnet_1",
            "aws_vpc.mongo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-057361eb0950ce339",
            "route_table_id": "rtb-0861feeeec6892e5e",
            "subnet_id": "subnet-054ea040ca89bd79a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.public_RT",
            "aws_subnet.public_subnet_2",
            "aws_vpc.mongo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_3c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e9006b7ae7ab616b",
            "route_table_id": "rtb-0861feeeec6892e5e",
            "subnet_id": "subnet-0add0e3f58d4b142d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.public_RT",
            "aws_subnet.public_subnet_3",
            "aws_vpc.mongo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mongodb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:442042553076:security-group/sg-0dcc27f904dc73012",
            "description": "Security group for MongoDB - SSH and VPC access only",
            "egress": [],
            "id": "sg-0dcc27f904dc73012",
            "ingress": [],
            "name": "mongodb_secure_sg",
            "name_prefix": "",
            "owner_id": "442042553076",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "MongoDB_Secure_SG"
            },
            "tags_all": {
              "Name": "MongoDB_Secure_SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c0d73acf588d471b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.mongo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:442042553076:subnet/subnet-003a61ff4f3337039",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-003a61ff4f3337039",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "442042553076",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private_Subnet_1"
            },
            "tags_all": {
              "Name": "Private_Subnet_1"
            },
            "vpc_id": "vpc-0c0d73acf588d471b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.mongo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:442042553076:subnet/subnet-0c5ae055090cfaa4a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c5ae055090cfaa4a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "442042553076",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private_Subnet_2"
            },
            "tags_all": {
              "Name": "Private_Subnet_2"
            },
            "vpc_id": "vpc-0c0d73acf588d471b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.mongo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:442042553076:subnet/subnet-0cd280359d93ab903",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cd280359d93ab903",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "442042553076",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private_Subnet_3"
            },
            "tags_all": {
              "Name": "Private_Subnet_3"
            },
            "vpc_id": "vpc-0c0d73acf588d471b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.mongo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:442042553076:subnet/subnet-00ca24babe8918328",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00ca24babe8918328",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "442042553076",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public_Subnet_1"
            },
            "tags_all": {
              "Name": "Public_Subnet_1"
            },
            "vpc_id": "vpc-0c0d73acf588d471b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.mongo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:442042553076:subnet/subnet-054ea040ca89bd79a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-054ea040ca89bd79a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "442042553076",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public_Subnet_2"
            },
            "tags_all": {
              "Name": "Public_Subnet_2"
            },
            "vpc_id": "vpc-0c0d73acf588d471b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.mongo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:442042553076:subnet/subnet-0add0e3f58d4b142d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0add0e3f58d4b142d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "442042553076",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public_Subnet_3"
            },
            "tags_all": {
              "Name": "Public_Subnet_3"
            },
            "vpc_id": "vpc-0c0d73acf588d471b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.mongo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "mongo_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:442042553076:vpc/vpc-0c0d73acf588d471b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0b50ba9392e9a34e9",
            "default_route_table_id": "rtb-07d14c07a831c832a",
            "default_security_group_id": "sg-01260deb0e3d10509",
            "dhcp_options_id": "dopt-0cc639bb95aba37c2",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c0d73acf588d471b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07d14c07a831c832a",
            "owner_id": "442042553076",
            "tags": {
              "Name": "mongo_vpc"
            },
            "tags_all": {
              "Name": "mongo_vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:442042553076:security-group-rule/sgr-0e4cdcfd67794e26c",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0e4cdcfd67794e26c",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0dcc27f904dc73012",
            "security_group_rule_id": "sgr-0e4cdcfd67794e26c",
            "tags": {
              "Name": "All_Outbound"
            },
            "tags_all": {
              "Name": "All_Outbound"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.mongodb_sg",
            "aws_vpc.mongo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_mongo_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:442042553076:security-group-rule/sgr-02b5414a01b0e748e",
            "cidr_ipv4": "192.168.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 27017,
            "id": "sgr-02b5414a01b0e748e",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0dcc27f904dc73012",
            "security_group_rule_id": "sgr-02b5414a01b0e748e",
            "tags": {
              "Name": "MongoDB_VPC_Access"
            },
            "tags_all": {
              "Name": "MongoDB_VPC_Access"
            },
            "to_port": 27017
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.mongodb_sg",
            "aws_vpc.mongo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh_admin",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:442042553076:security-group-rule/sgr-0220304a62cc2a6b1",
            "cidr_ipv4": "73.234.1.227/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0220304a62cc2a6b1",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0dcc27f904dc73012",
            "security_group_rule_id": "sgr-0220304a62cc2a6b1",
            "tags": {
              "Name": "SSH_Access_Admin"
            },
            "tags_all": {
              "Name": "SSH_Access_Admin"
            },
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.mongodb_sg",
            "aws_vpc.mongo_vpc"
          ]
        }
      ]
    }
  ]
}